styles/globals.css
/* ... */
.label5 {
  left: 84px;
  z-index: 13;
}
.label5,
.label6,
.label7 {
  position: absolute;
  margin: 0 !important;
  cursor: pointer;
}
.label6 {
  top: 380px;
  left: 122px;
  display: inline-block;
  width: 28px;
  height: 29px;
  flex-shrink: 0;
  z-index: 14;
}
.label7 {
  left: 162px;
  z-index: 15;
}
.label7,
.label8,
.label9 {
  cursor: pointer;
  top: 380px;
  display: inline-block;
  width: 28px;
  height: 29px;
  flex-shrink: 0;
}
.label8 {
  position: absolute;
  margin: 0 !important;
  left: 203px;
  z-index: 16;
}
.label9 {
  left: 244px;
  z-index: 17;
}
.label10,
.label11,
.label9 {
  cursor: pointer;
  position: absolute;
  margin: 0 !important;
}
.label10 {
  top: 380px;
  left: 283px;
  display: inline-block;
  width: 28px;
  height: 29px;
  flex-shrink: 0;
  z-index: 18;
}
.label11 {
  left: 323px;
  z-index: 19;
}
.label11,
.label12,
.label13 {
  cursor: pointer;
  top: 380px;
  display: inline-block;
  width: 28px;
  height: 29px;
  flex-shrink: 0;
}
.label12 {
  position: absolute;
  margin: 0 !important;
  left: 363px;
  z-index: 20;
}
.label13 {
  left: 402px;
  z-index: 21;
}
.asset-label,
.button-icon,
.label13 {
  position: absolute;
  margin: 0 !important;
}
.collateral-tvl-label,
.highest-tvl-bar-label,
.user-tvl-label,
.captial-ahead-label,
.total-tvl-label,
.premium,
.label4,
.label5,
.label6,
.label7,
.label8,
.label9,
.label10,
.label11,
.label12,
.label13 {  
  color: white;
} 
.button-icon {
  top: 9.5px;
  left: 63.87px;
  width: 11.26px;
  height: 13.5px;
  z-index: 0;
}
.asset-label {
  top: calc(50% - 11.5px);
  left: calc(50% - 31.5px);
  z-index: 1;
}
.asset-dropdown {
  position: absolute;
  top: -10px;
  left: 195px;
  background-color: #798eff;
  width: 75px;
  height: 27px;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  align-items: center;
  justify-content: center;
  z-index: 22;
  color: white
}
.menu {
  position: absolute;
  margin-top: 160%;
  width: 75px;
}
.menu > li:hover {
  background-color: lightgray;
}
.menu > li > button {
  text-align: center;
  color: inherit;
  border: none;
  margin: 0;
  font: inherit;
  cursor: pointer;
}
.menu-item {
  position: relative;
  text-align: center;
  border: 1px solid grey;
  background-color: #798eff;
}
.queue-stats-box {
  position: relative;  
  top: 54vh;
  left: 0.5vw;
  display: inline-flex;
}
.omni-stats-box {
  position: relative;  
  top: 34.3vh;
  left: 0.5vw;
  display: inline-flex;
}
.omni-unstaking-msg {
  position: relative;
  border: 1px solid #798eff;
  border-radius: 1.2rem;
  background-color: grey;
  width: 10.3vw;
  height: 14vh;
  display: inline-flex;
  left: 32.5vw;   
  font-size: 1vw;
  text-align: center;
}
.queue-stats-item {
  margin-left: 2vw;
}
.collateral-tvl-label {
  text-align: center;
  display: flex;
  width: 112px;
  height: 21px;
  font-size: large;
  flex-direction: column;
}
.highest-tvl-bar-label {
  position: absolute;
  margin: 0 !important;
  top: 137px;
  left: 162px;
  font-size: 17px;
  z-index: 24;
}
.x-axis {
  position: absolute;
  margin: 0 !important;
  top: 370px;
  left: 23px;
  border-top: 2px;
  background-color: #ffffff;
  width: 415px;
  height: 2px;
  z-index: 25;
}
.bid-actionbox {
  position: relative;
  width: 11vw;
  left: 31.8vw;
  top: -1vh;
}
.bid-actionbox-input{  
  background-color: rgb(69, 68, 68);
  width: 4.2vw;
  text-align: center;
  height: 4vh;
  display: inline-block;
  position: relative;
  top: 1px;
}
.bid-actionbox-labels {
  background-color: rgb(69, 68, 68);
  display: inline-block;
  height: 4vh;  
  margin-top: 0.3vh;
}
.bid-button {
  position: relative;
  width: 11vw;
  margin-top: 1vh;
  background-color: #798EFF;
}
.bid-actionlabel {
  display: inline;
  cursor: pointer;
}
.premium-toggle {
  position: relative;
  top: -6px;
  display: inline-grid;
  width: 2vw;
  height: 4vh;
  justify-items: center;
}
.plus-premium {
  cursor: pointer;
  font-weight: 600;
  font-size: .875rem;
  position: relative;
  background-color: #454444;
  height: 2vh;
  width: 1.5vw;
  top: -2px;
  display: inline-flex;
  user-select: none;
  align-items: center;
  justify-content: center;
}
.minus-premium {
  cursor: pointer;
  font-weight: 600;
  font-size: .875rem;
  position: relative;
  background-color: #454444;
  height: 2vh;
  width: 1.5vw;
  top: 1px;
  display: inline-flex;
  user-select: none;
  align-items: center;
  justify-content: center;
}
.plus-premium:hover,
.minus-premium:hover {
  background-color: #798EFF;
}
.sa-claim-button {
  z-index: 13;
  color: black;
  width: 11vw;
  height: 4vh;
  position: relative;
  top: 0vh;
  background-color: #D9D9D9;
}
.total-bids-card {
  width: 110px;
  height: 75px;
  top: 30px;
  left: 458px;
  font-size: medium;
  text-align: left;
  font-family: 'Space Grotesk';
}
.total-bids {
  top: 9px;
  left: 7px;
  position: relative;
}
.total-user-bids {
  top: 17px;
  left: 7px;
  position: relative;
}
.singleassetframe {
  position: absolute;
  top: 65px;
  left: 12px;
  background-color: #383838;
  box-shadow: 0px 0px 5px #c1c1c1;
  width: 593.5px;
  height: 550px;
  display: flex;
  flex-direction: column;
  padding: var(--padding-5xl) var(--padding-5xl) 1px;
  align-items: flex-start;
  justify-content: flex-start;
  gap: var(--gap-5xl);
  z-index: 30;
}
.capital-ahead-box,
.user-tvl-box {
  position: absolute;
  margin: 0 !important;
  top: 21.5vh;
  left: 17.8vw;
  background-color: rgba(121, 142, 255, 0.85);
  width: 102px;
  height: 236px;
  z-index: 1;
}
.user-tvl-box {
  background-color: rgba(79, 202, 187, 0.85);
  height: 44px;
  z-index: 2;
}
.captial-ahead-label,
.user-tvl-label {
  display: inline-block;
  width: 50px;
  height: 11px;
  flex-shrink: 0;
  z-index: 13;
}
.user-tvl-label {
  text-align: center;
  top: 12vh;
  left: 19.8vw;
}
.captial-ahead-label {
  text-align: center;
  top: 30vh;
  left: 19.8vw;
}
/* ... */

